# pkg/utils/models/order.go
@@ -11,6 +11,7 @@ type OrderFromCart struct {
 	PaymentID uint `json:"payment_id" binding:"required"`
 	AddressID uint `json:"address_id" binding:"required"`
 	CouponID  uint `json:"coupon_id" `
+	UseWallet bool `json:"use_wallet" gorm:"defalt:false"`
 }
 type OrderSuccessResponse struct {
 	OrderID        uint    `json:"order_id"`
